2007-11-21  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Utils.py: probably_alive now takes date rather than year
	* src/gen/proxy/living.py: create date from year
	* src/gen/lib/date.py: added methods to do date math
	  and return Date object (set_yr_mon_day_offset, copy_offset_ymd)
	* src/plugins/Calendar.py: updated to use probably alive date
	* src/Filters/Rules/Person/_ProbablyAlive.py: parse entry as date

2007-11-20  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/Makefile.am: up to date

2007-11-19  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/Makefile.am (dist_pkgdata_DATA): Use proper name.

2007-11-19  Brian Matherly <brian@gramps-project.org>
	* src/plugins/IndivComplete.py: Fix crash with alternate parents.

2007-11-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Relationship.py: many improvements and bug fixes
	* src/plugins/all_relations.py: bug fixes
	* src/plugins/RelCalc.py: use new API
	* src/plugins/rel_nl.py: finished, removed comment
	* src/plugins/rel_it.py: finished
	* src/plugins/rel_pl.py: move old code here away from Relationship
	* src/plugins/rel_pt.py: import gen.lib

2007-11-18  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0001361: Web report: Directory name 
	conflicts

2007-11-17 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_RepositoryModel.py: Properly display the city

2007-11-16  Stéphane Charette <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: issue #1381, no need to print
	"Confidence" on every reference line if it is "Normal"

2007-11-16  Jerome Rapinat <romjerome@yahoo.fr>
	* src/plugins/rel_pt.py: import gen.lib
        * src/DataViews/_PersonView.py: typo on gettext context
	* src/PageView.py: typo on gettext context

2007-11-16 Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	Trying to fix unicode filename handling on Windows. Patch ported from 2.2.
 	* src/Utils.py: add get_unicode_path()